WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
86929
REGRESSION(117646): fast/canvas/webgl/glsl-conformance.html is crashing in the DFG
https://bugs.webkit.org/show_bug.cgi?id=86929
Summary
REGRESSION(117646): fast/canvas/webgl/glsl-conformance.html is crashing in th...
Filip Pizlo
Reported
2012-05-18 17:27:17 PDT
This appears to be due to a branch simplification assuming that a particular block is unreachable, even though it is.
Attachments
the patch
(3.36 KB, patch)
2012-05-18 17:39 PDT
,
Filip Pizlo
oliver
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2012-05-18 17:39:30 PDT
Created
attachment 142831
[details]
the patch
Filip Pizlo
Comment 2
2012-05-18 17:54:35 PDT
Landed in
http://trac.webkit.org/changeset/117661
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug