REGRESSION(117646): fast/canvas/webgl/glsl-conformance.html is crashing in the DFG https://bugs.webkit.org/show_bug.cgi?id=86929

Reviewed by Oliver Hunt.

The problem was that if CFG simplification saw a Branch with identical successors,
it would always perform a basic block merge. But that's wrong if the successor has
other predecessors.

* dfg/DFGCFGSimplificationPhase.cpp:
(JSC::DFG::CFGSimplificationPhase::run):



Canonical link: https://commits.webkit.org/104560@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@117661 268f45cc-cd09-0410-ab3c-d52691b4dbfc